added css for reponsivity and fade-in component

--- a/frontend/src/components/Contact/Contact.css
+++ b/frontend/src/components/Contact/Contact.css
@@ -28,3 +28,12 @@
 .form-label {
     color: var(--tertiary)
 }
+
+
+@media (max-width: 1000px) {
+    .contact-box {
+        flex-direction: column;
+        text-align: center;
+        ;
+    }
+}
