--- a/frontend/src/components/Education/Education.css
+++ b/frontend/src/components/Education/Education.css
@@ -1,9 +1,28 @@
-.timeline-text {
-  opacity: 0;
-  transition: opacity 0.3s ease;
+.education-box {
+    display: flex;
+    justify-content: center;
+    margin: 2rem;
+    padding: 2rem;
+    border-radius: 12px;
+    box-shadow: 0 0 20px 3px var(--quaternary);
 }
 
-.timeline-text.hovered {
+.timeline-text {
+  opacity: 0;
+  transition: opacity 1s ease, transform 1.5s ease;
+  color: var(--secondary);
+}
+
+.timeline-text.visible {
   opacity: 1;
-  color: var(--secondary)
+  transform: translateY(0);
+}
+
+
+
+@media (max-width: 1000px) {
+  .education-box {
+    flex-direction: column;
+  }
+
 }
