--- a/frontend/src/components/NavBar/NavBar.css
+++ b/frontend/src/components/NavBar/NavBar.css
@@ -8,4 +8,11 @@
     box-shadow: 0 0 20px 3px var(--quaternary);
     position: sticky;
     top: 20px;
+    z-index: 2;
+}
+
+@media (max-width: 740px) {
+  .navbar {
+    display: none;
+  }
 }
