--- a/frontend/src/components/Introduction/Introduction.css
+++ b/frontend/src/components/Introduction/Introduction.css
@@ -9,7 +9,7 @@
 
 .heading {
     color: var(--secondary);
-    text-shadow: 0 3px 12px var(--quaternary);
+    text-shadow: 0 3px 8px rgba(0, 0, 0, 0.5);
 }
 
 .introduction-text {
