--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,11 +1,11 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Mulish:wght@200;300;400;500;600;700;800;900&display=swap');
 
 html {
-  font-family: 'Open Sans', sans-serif;
+  font-family: 'Mulish', sans-serif;
 }
 
 :root {
-  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
+  font-family: 'Mulish', system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
   color-scheme: light dark;
@@ -17,11 +17,11 @@ html {
 
 /* Color palette */
 :root {
-  --primary: #22223B;
-  --secondary: #9A8C98;
-  --tertiary: #C9ADA7;
-  --accent: #F2E9E4;
-  --quaternary: #4A4E69;
+  --primary: #22223B; /* 34, 34, 59 */
+  --secondary: #9A8C98; /* 154, 140, 152 */
+  --tertiary: #C9ADA7; /* 201, 173, 167 */
+  --accent: #F2E9E4; /* 242, 233, 228 */
+  --quaternary: #4A4E69; /* 74, 78, 105 */
 }
 
 a {
