--- a/frontend/src/components/Shared/ScrollToTop/ScrollToTop.css
+++ b/frontend/src/components/Shared/ScrollToTop/ScrollToTop.css
@@ -5,12 +5,18 @@
 
 .scrollToTop {
     position: fixed;
-    bottom: 5%;
-    left: 92%;
+    bottom: 2.5em;
+    right: 5em;
     text-align: center;
     z-index: 5;
 }
 
 .scrollToTop:hover {
     transform: scale(1.1);
+}
+
+@media (max-width: 740px) {
+  .scrollToTop {
+    right: 2em;
+  }
 }
