--- a/frontend/src/components/Projects/Projects.css
+++ b/frontend/src/components/Projects/Projects.css
@@ -1,13 +1,11 @@
-.box {
-  display: flex;
-  justify-content: center;
-  margin: 2rem;
-  padding: 2rem;
-  border-radius: 12px;
-  box-shadow:
-    0 8px 10px rgba(29, 29, 49, 0.9),
-    inset 0 2px 0 rgba(242, 233, 228, 0.05),
-    inset 0 -2px 0 rgba(154, 140, 152, 0.05),
-    inset 0 0 0px 0px rgba(255, 255, 255, 0);
-}
 
+
+.project-section {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  align-items: flex-start;
+  gap: 1em;
+  padding: 0 2em 0 2em;
+}
