--- a/frontend/src/components/Shared/ImageCarousel/ImageCarousel.css
+++ b/frontend/src/components/Shared/ImageCarousel/ImageCarousel.css
@@ -50,6 +50,7 @@ img.block {
     cursor: pointer;
     padding: 0;
     background-color: transparent;
+    color: var(--primary);
 }
 
 .nav-button.left {
