--- a/frontend/src/components/Introduction/Introduction.css
+++ b/frontend/src/components/Introduction/Introduction.css
@@ -26,7 +26,7 @@
 
 .introduction-text {
     display: flex;
-    align-items: center;
+    align-items: flex-end;
     font-size: 1.2rem;
     max-width: 500px;
 }
