--- a/frontend/src/components/Education/Education.css
+++ b/frontend/src/components/Education/Education.css
@@ -23,10 +23,9 @@
 }
 
 
-
-@media (max-width: 1000px) {
+@media (max-width: 740px) {
   .education-box {
     flex-direction: column;
+    margin: 0.5rem;
   }
-
 }
