--- a/frontend/src/components/Experience/Experience.css
+++ b/frontend/src/components/Experience/Experience.css
@@ -12,7 +12,7 @@
       inset 0 0 0px 0px rgba(255, 255, 255, 0);
 }
 
-.exp-heading, .project-heading{
+.exp-heading, .project-heading, .education-heading {
     text-align: start;
     color: var(--secondary);
     text-shadow: 0 3px 8px rgba(0, 0, 0, 0.5);
@@ -68,10 +68,12 @@
 }
 
 @media (max-width: 740px) {
-  .exp-heading {
+  .exp-heading,.project-heading, .education-heading {
+    text-align: center;
     padding: 0 0 1em 0;
   }
   .exp-box, .project-box {
+    flex-direction: column;
     margin: 0.5rem;
   }
 }
